@@ -23,6 +23,7 @@ Revision history for Rex
  [REVISION]
  - Use author tests to check tidiness of bin files
  - Use Symbol to manipulate Perl symbols
+ - Add initial rsync tests
 
 1.11.0 2020-06-05 Ferenc Erki <erkiferenc@gmail.com>
  [BUG FIXES]
